# generic-lang

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  TESTING.md  _typos.toml  pyproject.toml  test_bool_list.gen  test_debug.gen  test_final.gen  test_fstring.gen  test_fstring_advanced.gen  test_interpolation.gen  test_issue.gen  test_list.gen  test_middle.gen  test_minimal.gen  test_simple_fstring.gen  test_spaces.gen  test_value_constructors.gen
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yaml  copilot-setup-steps.yml  publish.yaml  rust.yaml
benchmark/: binary_trees.gen  binary_trees.lox.nom  equality.gen  equality.lox.nom  globals.gen  instantiation.gen  instantiation.lox.nom  invocation.gen  invocation.lox.nom  locals.gen  method_call.gen  method_call.lox.nom  properties.gen  properties.lox.nom  string_equality.lox.nom  trees.gen  trees.lox.nom  zoo.gen  zoo.lox.nom
builtins/: exceptions.gen
crates/generic-lang/: Cargo.toml
crates/generic-lang-api/: Cargo.toml  cbindgen.toml
crates/generic-lang-api/include/: generic.h  generic_plugin.h
crates/generic-lang-api/src/: abi.rs  export.rs  host.rs  lib.rs
crates/generic-lang-api/tests/: export_module.rs
crates/generic-lang-lib/: Cargo.toml
crates/generic-lang-lib/src/: bitwise.rs  chunk.rs  config.rs  lib.rs  scanner.rs  testing.rs  types.rs  utils.rs
crates/generic-lang-lib/src/builtins/: core.gen  exceptions.gen
crates/generic-lang-lib/src/compiler/: back.rs  error.rs  front.rs  mod.rs  rules.rs
crates/generic-lang-lib/src/heap/: arenas.rs  mod.rs
crates/generic-lang-lib/src/natives/: dict.rs  exception.rs  generator.rs  list.rs  mod.rs  native_functions.rs  range.rs  set.rs  string.rs  template.rs  tuple.rs  value_constructors.rs
crates/generic-lang-lib/src/stdlib/rs/: math.rs
crates/generic-lang-lib/src/value/: classes.rs  functions.rs  mod.rs  natives.rs  number.rs  utils.rs
crates/generic-lang-lib/src/vm/: arithmetics.rs  callstack.rs  debug.rs  dunder.rs  errors.rs  exception_handling.rs  functions.rs  garbage_collection.rs  import.rs  mod.rs  native_containers.rs  run_instruction.rs  runtime_error.rs  setup.rs  state.rs  testing.rs
crates/generic-lang-lib/src/vm/plugins/: host_api.rs  loader.rs  mod.rs  tests.rs  trampolines.rs
crates/generic-lang/src/: main.rs
crates/generic-lang/tests/: exit_codes.rs
docs/: ARCHITECTURE.md  plugin-authors.md
docs/language/: README.md  classes.md  control-flow.md  exceptions.md  functions.md  modules.md  testing.md  values.md
plugin-examples/: .clang-format
plugin-examples/bad/: bad_name.c  no_arities.c  no_init.c  null_desc.c  null_fun.c  null_table.c  wrong_abi.c
plugin-examples/c/: c_demo_plugin.c
plugin-examples/cpp/: cpp_demo_plugin.cpp
plugin-examples/rust/: Cargo.toml
plugin-examples/rust/src/: lib.rs
plugin-examples/zig/: build.zig  zig_demo_plugin.zig
src/: chunk.rs  config.rs  enums.rs  heap.rs  main.rs  native_functions.rs  scanner.rs  testing.rs  types.rs  utils.rs  value.rs  vm.rs
src/builtins/: constants.gen  core.gen  exceptions.gen  mod.rs  utils.gen
src/compiler/: back.rs  error.rs  front.rs  mod.rs  rules.rs  variables.rs
src/heap/: arenas.rs  mod.rs
src/natives/: dict.rs  exception.rs  generator.rs  list.rs  mod.rs  native_functions.rs  range.rs  set.rs  string.rs  template.rs  tuple.rs  value_constructors.rs
src/stdlib/: math.rs  mod.rs  zen.gen
src/value/: classes.rs  functions.rs  mod.rs  natives.rs  number.rs  utils.rs
src/vm/: arithmetics.rs  bytecode.rs  callstack.rs  debug.rs  dunder.rs  error.rs  errors.rs  exception_handling.rs  functions.rs  garbage_collection.rs  import.rs  mod.rs  native_containers.rs  run_instruction.rs  runtime_error.rs  setup.rs  stack.rs  state.rs  testing.rs  tests.rs  variables.rs
test/: builtin_classes.gen  builtin_classes_constructor_error.gen  builtin_type_constructors.gen  builtins_constants.gen  builtins_integration.gen  builtins_utils.gen  isinstance.gen  isinstance_inheritance.gen  precedence.gen  testing_stdlib.gen
test/assignment/: undefined.gen
test/benchmark/: binary_trees.gen  instantiation.gen  method_call.gen  properties.gen  trees.gen  zoo.gen  zoo_batch.gen
test/break/: simple_for.gen  simple_foreach.gen
test/call/: bool.gen  nil.gen  num.gen  object.gen  string.gen
test/closure/: assign_captured.gen  assign_to_closure.gen  delayed_closure_change.gen
test/const/: late_init_global.gen  reassign_global.gen
test/constructor/: arguments.gen  bool_constructor.gen  call_init_early_return.gen  call_init_explicitly.gen  default_arguments.gen  early_return.gen  extra_arguments.gen  float_constructor.gen  float_error_invalid_string.gen  float_error_missing_args.gen  init_not_method.gen  integer_constructor.gen  integer_error_invalid_string.gen  integer_error_missing_args.gen  missing_arguments.gen  rational_constructor.gen  rational_error_too_many_args.gen  rational_error_wrong_args.gen  rational_error_zero_denominator.gen  return_in_nested_function.gen  return_value.gen  string_constructor.gen
test/continue/: simple_for.gen  simple_foreach.gen  simple_while.gen
test/dict/: clear.gen  dict_changed_during_lookup.gen  dict_custom_hash.gen  dict_gc_during_hash.gen  dict_get.gen  dict_in.gen  dict_init.gen  dict_init_list_pair_mutated_in_hash.gen  dict_instance_key.gen  dict_literal.gen  dict_mutate_in_dunders.gen  dict_objects.gen  dict_pop.gen  dict_pop_in_eq.gen  dict_pop_sibling_gc_in_eq.gen  dict_reentrant_equal_insert.gen  dict_reentrant_insert_runaway.gen  dict_set.gen  dict_set_catch_inside_hash_eq.gen  get.gen  iteration.gen  iteration_mutation.gen
test/error_recovery/: class_body_cascade_no_infinite_loop.gen  class_body_non_method.gen  switch_non_case_token.gen  switch_unparseable_case_statement.gen  too_many_constants_class_name.gen  too_many_constants_closure.gen  too_many_locals_foreach_alias.gen  (+2 more)
test/if/: truth.gen  (+1 more)
tool/: analysis_options.yaml  pubspec.yaml
unittest_test/: directory_expectations.txt  test_basic.gen  test_empty.gen
(+525 files in other folders)
