[package]
name        = "generic-lang"
version     = "1.2.0"
edition     = "2024"
authors     = ["Jan-Eric <janericnitschke@gmail.com"]
description = "A Lox based programming language"
readme      = "README.md"
repository  = "https://github.com/JanEricNitschke/generic-lang"
license     = "MIT"
keywords    = ["programming-language", "generic"]
categories  = ["parser-implementations", "compilers"]
include     = ["/src", "Cargo.toml", "/LICENSE", "/README.md", "/Makefile"]


[[bin]]
name = "generic"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { version = "4.5.43", features = ["derive"] }
derivative   = "2.2.0"
rustc-hash   = "2.1.1"
humansize    = "2.1.3"
num_enum     = "0.7.4"
paste        = "1.0.15"
shrinkwraprs = "0.3.0"
slotmap      = "1.0.7"
derive_more  = { version = "2.0.1", features = ["from", "not"] }
rand         = "0.9.2"
path-slash   = "0.2.1"
strum        = "0.27"
strum_macros = "0.27"
convert_case = "0.8.0"
num-bigint   = { version = "0.4.6", features = ["rand"] }
num-traits   = "0.2.19"
hashbrown    = "0.15.5"
thiserror = "2.0.15"
include_dir  = "0.7.4"
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"

[features]
print_code              = []
print_code_verbose      = ["print_code"]
print_code_builtin      = ["print_code_verbose"]
trace_execution         = []
trace_execution_verbose = ["trace_execution"]
trace_execution_builtin = ["trace_execution_verbose"]
log_gc                  = []
stress_gc               = []
debug_parser            = []
debug_parser_builtin    = ["debug_parser"]
debug_scanner           = []
debug_scanner_builtin   = ["debug_scanner"]

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"

[profile.stress_gc]
inherits = "dev"
