[workspace]
resolver = "3"
members = ["crates/generic-lang", "crates/generic-lang-lib", "crates/generic-lang-api"]
# The plugin test fixtures are built out-of-band by `make plugin-test-fixture`
# and must not be part of the workspace: `cargo package --workspace` must not
# package them, `--locked` release builds must not resolve their deps, and
# `cargo test --workspace` must not build cdylibs nobody runs directly.
exclude = ["plugin-examples/rust"]

[workspace.package]
version      = "2.1.0"
edition      = "2024"
rust-version = "1.88"
authors    = ["Jan-Eric <janericnitschke@gmail.com"]
readme     = "README.md"
repository = "https://github.com/JanEricNitschke/generic-lang"
license    = "MIT"
keywords   = ["programming-language", "generic"]
categories = ["parser-implementations", "compilers"]

[workspace.dependencies]
# default-features off so dependents (the bin) control the lib's features
# explicitly - that is what makes `--no-default-features` builds of the
# binary actually disable plugins.
generic-lang-lib = { version = "2.1.0", path = "crates/generic-lang-lib", default-features = false }
generic-lang-api = { version = "0.1.0", path = "crates/generic-lang-api" }

clap         = { version = "4.6.1", features = ["derive"] }
convert_case = "0.11.0"
derivative   = "2.2.0"
derive_more  = { version = "2.1.1", features = ["from", "not"] }
hashbrown    = "0.17.1"
humansize    = "2.1.3"
include_dir  = "0.7.4"
libloading   = "0.9.0"
num-bigint   = { version = "0.4.6", features = ["rand"] }
num-traits   = "0.2.19"
num_enum     = "0.7.6"
paste        = "1.0.15"
path-slash   = "0.2.1"
rand         = "0.10.1"
rustc-hash   = "2.1.2"
shrinkwraprs = "0.3.0"
slotmap      = "1.1.1"
strum        = "0.28"
strum_macros = "0.28"
thiserror    = "2.0.18"
tinyvec      = { version = "1.10.0", features = ["alloc"] }
unicode-normalization = "0.1.25"
unicode-segmentation  = "1.13.2"
walkdir      = "2.5.0"

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"

[profile.stress_gc]
inherits = "dev"
