[package]
name        = "generic-lang-lib"
description = "Core library of the generic programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
convert_case = { workspace = true }
derivative   = { workspace = true }
derive_more  = { workspace = true }
generic-lang-api = { workspace = true, optional = true }
hashbrown    = { workspace = true }
humansize    = { workspace = true }
include_dir  = { workspace = true }
libloading   = { workspace = true, optional = true }
num-bigint   = { workspace = true }
num-traits   = { workspace = true }
num_enum     = { workspace = true }
paste        = { workspace = true }
path-slash   = { workspace = true }
rand         = { workspace = true }
rustc-hash   = { workspace = true }
shrinkwraprs = { workspace = true }
slotmap      = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tinyvec      = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation  = { workspace = true }
walkdir      = { workspace = true }

[features]
default                 = ["plugins"]
# C-ABI native module loading (`import` of shared libraries). Off: none of
# the plugin machinery exists and the crate has zero plugin dependencies.
plugins                 = ["dep:generic-lang-api", "dep:libloading"]
print_code              = []
print_code_verbose      = ["print_code"]
print_code_builtin      = ["print_code_verbose"]
trace_execution         = []
trace_execution_verbose = ["trace_execution"]
trace_execution_builtin = ["trace_execution_verbose"]
log_gc                  = []
stress_gc               = []
debug_parser            = []
debug_parser_builtin    = ["debug_parser"]
debug_scanner           = []
debug_scanner_builtin   = ["debug_scanner"]
